# flask-saml2

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  CONTRIBUTORS.txt  Dockerfile  HISTORY.rst  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  python-2.7.Dockerfile  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: ACKNOWLEDGEMENTS.txt  CHANGES.txt  DEVELOPERS.txt  DJANGO_SAML2_SP.txt  GOOGLE.txt  GOOGLE_APPS.txt  INSTALL.txt  MIGRATING_SETTINGS_TO_METADATA.txt  SALESFORCE.txt  SETTINGS_AND_METADATA.txt  SIMPLESAMLPHP.txt
docs/: Makefile  requirements.txt  watch.py
docs/source/: codex.rst  conf.py  examples.rst  exceptions.rst  index.rst  installing.rst  internals.rst  signing.rst  (+2 more)
examples/: idp.py  sp.py
flask_saml2/: __init__.py  codex.py  constants.py  exceptions.py  signing.py  utils.py  version.py  xml_parser.py  xml_signing.py  xml_templates.py
flask_saml2_idp/: __init__.py  adaptor.py  blueprint.py  exceptions.py  processor.py  request.py  types.py  utils.py  version.py  views.py  xml_render.py  xml_templates.py
idptest/: db.sqlite3  middleware.py  pytest.ini  settings.py  urls.py  wsgi.py
saml2idp/: __init__.py  base.py  codex.py  demo.py  exceptions.py  google_apps.py  logging.py  metadata.py  models.py  registry.py  request.py  salesforce.py  saml2idp_metadata.py  shib.py  signxml.py  urls.py  views.py  xml_render.py  xml_signing.py  xml_templates.py
tests/: base.py  requirements.txt  test_google_apps.py  test_salesforce.py  test_signing.py  test_views.py
(+133 files in other folders)
