[build-system]
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "flask-saml2"
description = "SAML 2.0 IdP and SP for Flask and Python 3"
readme = "README.rst"
authors = [
  {name = "Tim Heap", email = "tim.heap@tidetech.org"},
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Framework :: Flask',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Security',
  'Topic :: System :: Systems Administration :: Authentication/Directory',
]
dependencies = [
  'attrs>=18.1.0',
  'Flask>=1.0.0',
  'signxml>=2.4.0',
  'lxml>=3.8.0',
  'pyopenssl==23.0.0',
  'defusedxml>=0.5.0',
  'pytz>=0',
  'iso8601>=0.1.12,<1.2.0',
]
version = "0.3.2"

[toos.setuptools]
include-package-data = true
zip-safe = false
licence = { text = "MIT" }
url='http://github.com/timheap/flask-saml2'

# [tool.setuptools.packages.find]
# # list of folders that contain the packages (["."] by default)
# where = ["flask_saml2*"]

[tool.isort]
line_length=80
multi_line_output=4
skip="migrations"

[tool.flake8]
max-line-length = 100
ignore = ["E501", "E731"]
